--- a/client/views/partials/lrs/lrEdit.html
+++ b/client/views/partials/lrs/lrEdit.html
@@ -29,7 +29,7 @@
                     <div class="styling-input-list">
                         <input ng-model="lr.consignorGSTNo" type="text" class="form-control custom-form-control"
                               readonly>
-                        <label class="focus-effect-for-input" aria-hidden="true">Consignor GST No*</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">Consignor GST No</label>
 
                     </div>
                 </div>
