--- a/client/views/partials/lrs/lrEdit.html
+++ b/client/views/partials/lrs/lrEdit.html
@@ -27,8 +27,7 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
-                        <input ng-model="lr.consignorGSTNo" type="text" class="form-control custom-form-control"
-                              readonly>
+                        <input ng-model="lr.consignorGSTNo" type="text" class="form-control custom-form-control" readonly>
                         <label class="focus-effect-for-input" aria-hidden="true">Consignor GST No</label>
 
                     </div>
