--- a/client/views/partials/tripSettlement/tripSettlement-edit.html
+++ b/client/views/partials/tripSettlement/tripSettlement-edit.html
@@ -76,7 +76,7 @@
                              <label class="focus-effect-for-input" aria-hidden="true"> Start Km</label>
                          </div>
                      </div>
-                         <div class="col-sm-1 form-group col-xs-12"> <a href="#" class="addingMaster" ng-click="addFromAndTo()" >
+                         <div class="col-sm-1 form-group col-xs-12"> <a href="#" class="addingMaster" ng-click="addFromAndTo()" ng-show="$index==0">
                              <i class="fa fa-plus-square"></i>
                          </a></div>
                          <a href="#" class="addingMaster col-sm-1 col-xs-12" ng-click="delete($index)"
@@ -101,7 +101,7 @@
                     <label class="focus-effect-for-input" aria-hidden="true">Cash Advance First Point</label>
                 </div>
             </div>
-            <div class="col-sm-1 form-group col-xs-12"> <a href="#" class="addingMaster" ng-click="addCashAdvances()" >
+            <div class="col-sm-1 form-group col-xs-12"> <a href="#" class="addingMaster" ng-click="addCashAdvances()" ng-show="$index==0">
                 <i class="fa fa-plus-square"></i>
             </a></div>
             <a href="#" class="addingMaster col-sm-1" ng-click="cashDelete($index)"
@@ -112,7 +112,7 @@
 
         </div>
     </div>
-    <div ng-repeat="diselLiter in tripSettlement.diselLiters">
+    <div ng-repeat="diselLiter in tripSettlement.dieselLiters">
         <div class="col-sm-12 col-xs-12 mt-10">
             <div class=" col-sm-3 form-group col-xs-12">
                 <div class="styling-input-list">
@@ -138,7 +138,7 @@
                     <label class="focus-effect-for-input" aria-hidden="true">Bill No</label>
                 </div>
             </div>
-            <div class="col-sm-1 form-group col-xs-12"> <a href="#" class="addingMaster" ng-click="addDiselLiters()" >
+            <div class="col-sm-1 form-group col-xs-12"> <a href="#" class="addingMaster" ng-click="addDiselLiters()" ng-show="$index==0">
                 <i class="fa fa-plus-square"></i>
             </a></div>
             <a href="#" class="addingMaster col-sm-1" ng-click="diselDelete($index)"
