--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -2,11 +2,11 @@
     <div class="col-xs-12 account-edit">
         <h2 class="title-name">{{pageTitle}}</h2>
         <form class="mt-10">
-            <div ng-repeat="exp in invoice.trip">
+            <div ng-repeat="exp in invoice.trip track by $index">
                 <div class="col-sm-12 col-xs-12 mt-10">
                     <div class=" col-sm-3 form-group col-xs-12">
                         <div class="styling-input-list">
-                            <input type="text" class="form-control custom-form-control" ng-model="exp.from"/>
+                            <input type="text" id="source{{$index}}" class="form-control custom-form-control"  ng-change="searchSource($index)"ng-model="exp.from"/>
                             <label class="focus-effect-for-input" aria-hidden="true">From</label>
                         </div>
                     </div>
@@ -16,7 +16,7 @@
                     </div>
                     <div class=" col-sm-3 form-group col-xs-12">
                         <div class="styling-input-list">
-                            <input type="text" class="form-control custom-form-control" ng-model="exp.to"/>
+                            <input type="text" id="destination{{$index}}" class="form-control custom-form-control" ng-change="searchDestination($index)" ng-model="exp.to"/>
                             <label class="focus-effect-for-input" aria-hidden="true">To</label>
                         </div>
                     </div>
@@ -56,6 +56,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.ratePerTonne"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Rate Per Tonne</label>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6 col-xs-12 mt-10">
                 <div class="form-group col-xs-12">
@@ -77,6 +85,14 @@
                         <div class="styling-input-list">
                             <input type="text" class="form-control custom-form-control" ng-model="invoice.quantity"/>
                             <label class="focus-effect-for-input" aria-hidden="true">No of Trips</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.tonnage"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Tonnage</label>
                         </div>
                     </div>
                 </div>
