--- a/client/views/partials/lrs/lrsList.html
+++ b/client/views/partials/lrs/lrsList.html
@@ -46,9 +46,9 @@
             <td data-title="'LR No'" sortable="'lrNo'" class="clickable-item">{{
                 lr.lrNo}}
             </td>
-            <td data-title="'Truck No'" sortable="'registrationNo'" class="clickable-item">{{
+           <!-- <td data-title="'Truck No'" sortable="'registrationNo'" class="clickable-item">{{
                 lr.registrationNo}}
-            </td>
+            </td>-->
             <td data-title="'Consignor'" sortable="'consignorName'" class="clickable-item">{{
                 lr.consignorName }}
             </td>
