--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -31,6 +31,9 @@
             <div class="col-xs-12 mt-25">
                 <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
                     <tr style="text-align: center;" ng-repeat="truck in trucksData">
+                        <td data-title="'S.No'">
+                            {{$index+1}}
+                        </td>
                         <td data-title="'Date & Time'" sortable="'createdAt'" class="clickable-item col-sm-2">
                             <a href="#"></a>
                             {{truck.attrs.latestLocation.createdAt |date : "dd/MM/y HH:mm" }}
