--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -2,9 +2,99 @@
     <div class="col-xs-12 account-edit">
         <h2 class="title-name">{{pageTitle}}</h2>
         <form class="mt-10">
-            <div ng-repeat="exp in invoice.trip track by $index">
-                <div class="col-sm-12 col-xs-12 mt-10">
-                    <div class=" col-sm-3 form-group col-xs-12">
+            <div class="col-sm-12 col-xs-12 mt-10">
+                <div class="checkbox">
+                    <label>
+                        <input ng-model="invoice.addTrip" type="checkbox" checked>
+                        <span class="cr">
+                            <i class="cr-icon fa fa-check"></i>
+                        </span>
+                        Add Trip
+                    </label>
+                </div>
+            </div>
+            <span ng-if="invoice.addTrip">
+            <div class="col-sm-12 col-xs-12 mt-10">
+                    <div class="form-group col-sm-6 col-xs-12">
+                            <div class="styling-input-list">
+                                <ui-select ng-model="invoice.tripId" theme="select2"
+                                           title="Choose a Truck" append-to-body="true">
+                                    <ui-select-match class="form-control custom-form-control">
+                                        {{$select.selected.tripId || tripId }}
+                                    </ui-select-match>
+                                    <ui-select-choices repeat="trip in trips  | propsFilter: {tripId: $select.search}">
+                                        <div ng-bind-html="trip.tripId| highlight: $select.search"></div>
+                                    </ui-select-choices>
+                                </ui-select>
+                                <label class="focus-effect-for-input">Trip Id</label>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2"> <a href="#" class="addingMaster" ng-click="addFromAndToTrip()" >
+                                <i class="fa fa-plus-square"></i>
+                            </a></div>
+                </div>
+
+                </span>
+            <span ng-show="temp">
+                <div ng-repeat="exp in invoice.trip">
+                        <div class="col-sm-12 col-xs-12 mt-10">
+                            <div class=" col-sm-2 form-group col-xs-12">
+                                <div class="styling-input-list">
+                                    <input type="text" class="form-control custom-form-control" ng-model="exp.date" readonly/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Date</label>
+                                </div>
+                            </div>
+                            <div class=" col-sm-2 form-group col-xs-12">
+                                <div class="styling-input-list">
+                                    <input type="text" class="form-control custom-form-control" ng-model="exp.from" readonly/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">From</label>
+                                </div>
+                            </div>
+                            <div class=" col-sm-2 form-group col-xs-12">
+                                <div class="styling-input-list">
+                                    <input type="text" class="form-control custom-form-control" ng-model="exp.to" readonly/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">To</label>
+                                </div>
+                            </div>
+                            <div class=" col-sm-2 form-group col-xs-12">
+                                <div class="styling-input-list">
+                                    <input type="text" class="form-control custom-form-control" ng-model="exp.tonnage" readonly/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Tonnage</label>
+                                </div>
+                            </div>
+                            <div class=" col-sm-2 form-group col-xs-12">
+                                <div class="styling-input-list">
+                                    <input type="text" class="form-control custom-form-control" ng-model="exp.ratePerTonne" readonly/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Rate/Tonne</label>
+                                </div>
+                            </div>
+
+                            <a href="#" class="addingMaster" ng-click="delete($index)"
+                               ng-show="$index>=0">
+                                <i class="fa fa-minus-square"></i>
+                            </a>
+                        </div>
+                    </div>
+                </span>
+            <span data-ng-hide="invoice.addTrip">
+                <div ng-repeat="exp in invoice.trip track by $index">
+                    <div class="col-sm-12 col-xs-12 mt-10">
+                        <div class="form-group col-sm-2 col-xs-12">
+                                <div class="styling-input-list">
+                                    <ui-select ng-model="exp.vehicleNo" theme="select2"
+                                               title="Choose a Truck" append-to-body="true">
+                                        <ui-select-match class="form-control custom-form-control">
+                                            {{$select.selected.registrationNo || truckRegNo}}
+                                        </ui-select-match>
+                                        <ui-select-choices repeat="truck in trucks| propsFilter: {registrationNo: $select.search}">
+                                            <div ng-bind-html="truck.registrationNo| highlight: $select.search"></div>
+                                        </ui-select-choices>
+                                    </ui-select>
+                                    <label class="focus-effect-for-input">Vehicle No</label>
+                                </div>
+                            </div>
+                    <div class=" col-sm-2 form-group col-xs-12">
                         <div class="styling-input-list">
                             <input type="text" id="source{{$index}}" class="form-control custom-form-control"  ng-change="searchSource($index)"ng-model="exp.from"/>
                             <label class="focus-effect-for-input" aria-hidden="true">From</label>
@@ -14,7 +104,7 @@
                         <date-picker id="fromDate1" ng-model="exp.loadedOn"
                                      class="'custom-form-control'" placeholder="'Loaded On'"></date-picker>
                     </div>
-                    <div class=" col-sm-3 form-group col-xs-12">
+                    <div class=" col-sm-2 form-group col-xs-12">
                         <div class="styling-input-list">
                             <input type="text" id="destination{{$index}}" class="form-control custom-form-control" ng-change="searchDestination($index)" ng-model="exp.to"/>
                             <label class="focus-effect-for-input" aria-hidden="true">To</label>
@@ -24,17 +114,28 @@
                         <date-picker id="toDate1" ng-model="exp.unloadedOn"
                                      class="'custom-form-control'" placeholder="'UnLoaded On'"></date-picker>
                     </div>
-                    <div class="col-sm-2"> <a href="#" class="addingMaster" ng-click="addFromAndTo()" ng-show="$index==0">
+                    <div class="col-sm-1"> <a href="#" class="addingMaster" ng-click="addFromAndTo()" ng-show="$index==0">
                         <i class="fa fa-plus-square"></i>
                     </a></div>
+                        <!-- <div class=" col-sm-1 col-xs-12">
+
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" ng-model="driver.isActive">
+                                        <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                        AddTrip
+                                    </label>
+                                </div>
+
+                        </div> -->
                     <a href="#" class="addingMaster" ng-click="delete($index)"
                        ng-show="$index>0">
                         <i class="fa fa-minus-square"></i>
                     </a>
                 </div>
             </div>
-            <div class="col-sm-6 col-xs-12 mt-10">
-                <div class="form-group col-xs-12">
+            <div class="col-sm-12 col-xs-12 mt-10">
+                <div class="form-group col-sm-12 col-xs-12">
                     <div class="styling-input-list">
                         <ui-select ng-model="invoice.partyId"  theme="select2"
                                    title="Choose a party" append-to-body="true">
@@ -48,6 +149,9 @@
                         <label class="focus-effect-for-input">Party*</label>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-sm-6 col-xs-12 mt-10">
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
                         <div class="styling-input-list">
@@ -68,20 +172,6 @@
             <div class="col-sm-6 col-xs-12 mt-10">
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
-                        <ui-select ng-model="invoice.vehicleNo" theme="select2"
-                                   title="Choose a Truck" append-to-body="true">
-                            <ui-select-match class="form-control custom-form-control">
-                                {{$select.selected.registrationNo || truckRegNo}}
-                            </ui-select-match>
-                            <ui-select-choices repeat="truck in trucks | propsFilter: {registrationNo: $select.search}">
-                                <div ng-bind-html="truck.registrationNo | highlight: $select.search"></div>
-                            </ui-select-choices>
-                        </ui-select>
-                        <label class="focus-effect-for-input">Vehicle No</label>
-                    </div>
-                </div>
-                <div class="form-group col-xs-12">
-                    <div class="styling-input-list">
                         <div class="styling-input-list">
                             <input type="text" class="form-control custom-form-control" ng-model="invoice.quantity"/>
                             <label class="focus-effect-for-input" aria-hidden="true">No of Trips</label>
@@ -97,6 +187,7 @@
                     </div>
                 </div>
             </div>
+            </span>
         </form>
         <div class="col-xs-12">
             <div class="col-xs-4 mtb-25 sub-can">
