--- a/client/views/partials/lrs/lrsList.html
+++ b/client/views/partials/lrs/lrsList.html
@@ -50,7 +50,7 @@
                 lr.registrationNo}}
             </td>-->
             <td data-title="'Consignor'" sortable="'consignorName'" class="clickable-item">{{
-                lr.consignorName }}
+                lr.partyName }}
             </td>
             <td data-title="'Consignee'" sortable="'consigneeBanksNameAndAddress'" class="clickable-item">{{
                 lr.consigneeBanksNameAndAddress || '--'}}
