--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -47,6 +47,26 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
+                <select class="form-control custom-form-control" ng-model="job.partLocation" ng-change="getJobsForSelectedPartLocation(job.partLocation)">
+                    <option value="" selected>Select Part Location</option>
+                    <option ng-repeat="part in parts | orderBy" value="{{part.partLocationName}}">{{part.partLocationName}}</option>
+                    <option value="others">Others</option>
+                </select>
+            </div>
+        </div>
+        <div ng-show="job.partLocation =='others'">
+            <div class="form-group col-xs-12">
+                <div class="">
+                    <input type="text" ng-model="job.partLocationName"
+                           class="form-control custom-form-control"  placeholder="Part Location">
+                </div>
+            </div>
+        </div>
+        <div class="form-group col-xs-12">
+            <div class=" pos-relative">
+                        <span class="bot-arrow">
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                        </span>
                 <select class="form-control custom-form-control" ng-model="job.type">
                     <option value="" selected>Select Job Type</option>
                     <option ng-repeat="e in expenses | orderBy" value="{{e._id}}">{{e.expenseName}}</option>
@@ -84,6 +104,29 @@
                             </td>
                         </tr>
                         <tr ng-if="!records.length || records.length === 0">
+                            <td colspan="10">No Records exist.</td>
+                        </tr>
+                    </table>
+                </div>
+        </span>
+        <span ng-if="jobsForSelectedPart.length>0">
+                <div class="col-xs-12 pall-zero mb-10">
+                    <h2 class="table-name">Previous Jobs for selected part location:{{job.partLocation}}</h2>
+                </div>
+                <div class="mt-10">
+                    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="studentParams">
+                        <tr ng-repeat="record in jobsForSelectedPart " style="text-align: center;">
+                            <td data-title="'Last Job Date'" class="clickable-item">
+                                {{record.date | date:'dd-MM-y'}}
+                            </td>
+                            <td data-title="'Inventory'" class="clickable-item">
+                                {{job.inventory.name}}
+                            </td>
+                            <td data-title="'milege'" class="clickable-item">
+                                {{record.milege}}
+                            </td>
+                        </tr>
+                        <tr ng-if="!jobsForSelectedPart.length || jobsForSelectedPart.length === 0">
                             <td colspan="10">No Records exist.</td>
                         </tr>
                     </table>
