--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -47,7 +47,7 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                <select class="form-control custom-form-control" ng-model="job.partLocation" ng-change="getJobsForSelectedPartLocation(job.partLocation)">
+                <select class="form-control custom-form-control" ng-model="job.partLocation" ng-change="getJobForSelectedPartLocation(job.partLocation,job.vehicle)">
                     <option value="" selected>Select Part Location</option>
                     <option ng-repeat="part in parts | orderBy" value="{{part.partLocationName}}">{{part.partLocationName}}</option>
                     <option value="others">Others</option>
@@ -111,7 +111,7 @@
         </span>
         <span ng-if="jobsForSelectedPart.length>0">
                 <div class="col-xs-12 pall-zero mb-10">
-                    <h2 class="table-name">Previous Jobs for selected part location:{{job.partLocation}}</h2>
+                    <h2 class="table-name">Previous Job for selected part location:{{job.partLocation}}</h2>
                 </div>
                 <div class="mt-10">
                     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="studentParams">
@@ -120,7 +120,7 @@
                                 {{record.date | date:'dd-MM-y'}}
                             </td>
                             <td data-title="'Inventory'" class="clickable-item">
-                                {{job.inventory.name}}
+                                {{record.inventory.name}}
                             </td>
                             <td data-title="'milege'" class="clickable-item">
                                 {{record.milege}}
