Add OSM fallback

--- a/client/views/partials/lrs/lrsList.html
+++ b/client/views/partials/lrs/lrsList.html
@@ -49,14 +49,11 @@
            <!-- <td data-title="'Truck No'" sortable="'registrationNo'" class="clickable-item">{{
                 lr.registrationNo}}
             </td>-->
-            <td data-title="'Consignor'" sortable="'consignorName'" class="clickable-item">{{
-                lr.partyName }}
+            <td data-title="'Consignor'" sortable="'consignorName'" class="clickable-item">{{lr.partyName }}
             </td>
-            <td data-title="'Consignee'" sortable="'consigneeBanksNameAndAddress'" class="clickable-item">{{
-                lr.consigneeBanksNameAndAddress || '--'}}
+            <td data-title="'Consignee'" sortable="'consigneeBanksNameAndAddress'" class="clickable-item">{{lr.consigneeBanksNameAndAddress || '--'}}
             </td>
-            <td data-title="'Delivery Office'" sortable="'addressOfDeliveryOffice'" class="clickable-item">{{
-                lr.addressOfDeliveryOffice || '--'}}
+            <td data-title="'Delivery Office'" sortable="'addressOfDeliveryOffice'" class="clickable-item">{{lr.addressOfDeliveryOffice || '--'}}
             </td>
 
 
@@ -79,8 +76,7 @@
     </table>
     <div class="add-image pull-right">
         <figure>
-            <a href="#" ui-sref="lrEdit"><img src="images/Add_Parties.png" alt="Add LR"
-                                                            title="Add LR"></a>
+            <a href="#" ui-sref="lrEdit"><img src="images/Add_Parties.png" alt="Add LR" title="Add LR"></a>
         </figure>
     </div>
 
