--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -1,5 +1,4 @@
 <div class="col-xs-12 gpsListView" ng-controller="gpsListViewController">
-
     <div class="col-xs-12">
         <div class="lisk-block col-xs-12">
             <div class="col-xs-12">
@@ -7,34 +6,28 @@
 
                     <li class="col-sm-4"><h2>All Vehicles Location</h2></li>
 
-                   <!-- <li class="col-sm-4">
+                    <li class="col-sm-4">
                         <form>
-                            <div class="input-group stylish-input-group">
-                                <input type="text" ng-model="truckName" class="form-control"
-                                       placeholder="Search by vehicle number" ng-change="">
+                            <div class="input-group stylish-input-group th-demo">
+                                <input type="text" ng-model="filters.registrationNo"
+                                       uib-typeahead="truck.registrationNo for truck in trucksData | filter:$viewValue"
+                                       class="form-control search-control" typeahead-min-length="1"
+                                       typeahead-on-select="selectTruckId($item)"
+                                       typeahead-select-on-exact="true" placeholder="Type Reg No"
+                                       typeahead-no-results="noTruck" autocomplete="false">
+
+                                <div ng-show="noTrucks">
+                                    <i class="glyphicon glyphicon-remove red"></i>
+                                    <span class="red"> No Results Found </span>
+                                </div>
                                 <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="submit" ng-click="truckFilterWithRegNo()">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
                             </div>
                         </form>
                         <div class="clearfix"></div>
-                    </li>-->
-                    <li class="pos-relative col-sm-4 th-demo">
-                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                        <input type="text" ng-model="filters.registrationNo"
-                               uib-typeahead="truck.registrationNo for truck in trucksData | filter:$viewValue"
-                               class="form-control search-control" typeahead-min-length="1"
-                               typeahead-on-select="selectTruckId($item)"
-                               typeahead-select-on-exact="true" placeholder="Type Reg No"
-                               typeahead-no-results="noTruck" autocomplete="false">
-
-                        <div ng-show="noTrucks">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
-
                     </li>
 
                     <li><a href="#" class="map" ui-sref="mapView">Map view</a></li>
@@ -106,8 +99,8 @@
     </div>
     <div class="modal-body" id="modal-body">
         <div class="row">
-            <h3>Please click on this link <b>
-                <a href="mailto:?subject=GPS Tracking link for vehicle {{registrationNumber}} &body=Hi there, please the following link for tracking vehicle {{registrationNumber}} {{link}}  Regards, www.easygaadi.com">Email
+            <h3>Please click on this link <b><a
+                    href="mailto:?subject=GPS Tracking link for vehicle {{registrationNumber}} &body=Hi there, please the following link for tracking vehicle {{registrationNumber}} {{link}}  Regards, www.easygaadi.com">Email
                 Link</a></b></h3>
         </div>
     </div>
