time format changed in map view tracking

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,6 +1,10 @@
 /*
 Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
 */
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
 .select2-container {
     margin: 0;
     position: relative;
