--- a/client/views/partials/admin/administrators/administratorMenu.html
+++ b/client/views/partials/admin/administrators/administratorMenu.html
@@ -2,6 +2,7 @@
     <ul class="list-inline custom-ul">
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.administrators">Administrators</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.adminRoles">Admin Roles</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="admin.accessPermission">Access Permission</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.adminLogHistory">Admin Log History</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.franchises">Franchise</a></li>
     </ul>
