--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -31,10 +31,10 @@
     <div class="table-res">
         <table class="table table-bordered table-striped table-condensed table-hover" ng-table="truckOwnerParams">
             <tr ng-repeat="owners in currentPageOfTruckOwners" style="text-align: center;">
-                <!--<td data-title="'S.No'">
+                <td data-title="'S.No'">
                     {{$index+1}}
                 </td>
-                <td data-title="'ID'" sortable="'userId'" class="clickable-item">
+                <!--<td data-title="'ID'" sortable="'userId'" class="clickable-item">
                     {{owners.userId}}
                 </td>-->
                 <td data-title="'User Name'" sortable="'userId'" class="clickable-item" >
