--- a/client/views/partials/admin/services/erpAccounts.html
+++ b/client/views/partials/admin/services/erpAccounts.html
@@ -31,9 +31,9 @@
         <table class="table table-bordered table-striped table-condensed table-hover "
                ng-table="accountParams">
             <tr ng-repeat="account in currentPageOfAccounts" style="text-align: center;">
-                <!--<td data-title="'S No'">
+                <td data-title="'S.No'">
                     {{$index+1}}
-                </td>-->
+                </td>
                 <td data-title="'Customer Name'" sortable="'contactName'" class="clickable-item">
                     {{account.contactName}}
                 </td>
