--- a/client/views/partials/admin/customers/commissionAgents.html
+++ b/client/views/partials/admin/customers/commissionAgents.html
@@ -24,10 +24,10 @@
     <div class="table-res">
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="commissionAgentParams">
         <tr ng-repeat="commissionAgent in currentPageOfCommissionAgents" style="text-align: center;">
-            <!--<td data-title="'S.No'">
+            <td data-title="'S.No'">
                 {{$index+1}}
             </td>
-            <td data-title="'ID'" sortable="'userId'" class="clickable-item">
+           <!-- <td data-title="'ID'" sortable="'userId'" class="clickable-item">
                 {{commissionAgent.userId || '&#45;&#45;'}}
             </td>-->
             <td data-title="'User Name'" sortable="'userId'" class="clickable-item">
