--- a/client/views/partials/admin/customers/factoryOwners.html
+++ b/client/views/partials/admin/customers/factoryOwners.html
@@ -24,10 +24,10 @@
     <div class="table-res">
         <table class="table table-bordered table-striped table-condensed table-hover" ng-table="factoryOwnerParams">
             <tr ng-repeat="factoryOwner in currentPageOfFactoryOwners" style="text-align: center;">
-                <!--<td data-title="'S.No'">
+                <td data-title="'S.No'">
                     {{$index+1}}
                 </td>
-                <td data-title="'ID'" sortable="'userId'" class="clickable-item">
+                <!--<td data-title="'ID'" sortable="'userId'" class="clickable-item">
                     {{factoryOwner.userId || '&#45;&#45;'}}
                 </td>-->
                 <td data-title="'User Name'" sortable="'userId'" class="clickable-item">
