--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -166,7 +166,7 @@
         </div>
         <span ng-if="jobsForInventory.length>0">
             <div class="col-xs-12 pall-zero mb-10">
-                <h2 class="table-name">Previous jobs for inventory:{{inventory}}</h2>
+                <h2 class="table-name">Previous jobs for inventory:{{selectedInventoryName}}</h2>
             </div>
             <div class="mt-10">
                 <table class="table table-bordered table-striped table-condensed table-hover"
